--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Henry Semaganda Resume</title>
+  <title>Kakooza Abraham Jerry Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/viewer?url=https://github.com/KakoozaJerry/resume.github.io/raw/main/jerrysCV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
