--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,6 @@
   <title>Kakooza Abraham Jerry Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/viewer?url=https://github.com/KakoozaJerry/resume.github.io/raw/main/jerrysCV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/viewer?url=https://github.com/KakoozaJerry/KakoozaJerry.github.io/raw/master/jerrysCV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
