Added 1.5px a bottom margin on top skills

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ http://www.templatemo.com/tm-498-stimulus
                
 
                <div class="bg-yellow col-md-3 col-sm-6">
-                    <div class="skill-thumb">
+                    <div class="skill-thumb" style="margin-bottom:1.5px;">
                          <div class="wow section-title color-white" data-wow-delay="1.2s">
                               <h1>My Top Skills</h1>
                               <p class="color-white"> Python, Data Science, Web Development, Javascript, NodeJS</p>
