--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ http://www.templatemo.com/tm-498-stimulus
                <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
                     <li><a href="#about" class="smoothScroll">Resume</a></li>
-                    <li><a href="#experience" class="smoothScroll">Projects</a></li>
-                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                    <li><a href="#service" class="smoothScroll">Projects</a></li>
+                    <li><a href="#service" class="smoothScroll">Contact</a></li>
                </ul>
           </div>
 
@@ -209,26 +209,56 @@ http://www.templatemo.com/tm-498-stimulus
                <div class="col-md-6 col-sm-6">
                     <div class="color-white experience-thumb">
                          <div class="wow fadeInUp section-title" data-wow-delay="0.8s">
-                              <h1>My Experiences</h1>
-                              <p class="color-white">Previous companies and my tasks</p>
+                              <h1>My Contacts</h1>
+                              <p class="color-white" style="font-family: 'Source Sans Pro';">Feel free to reach out to me on any of the following platforms</p>
                          </div>
 
                          <div class="wow fadeInUp color-white media" data-wow-delay="1.2s">
                               <div class="media-object media-left">
-                                   <i class="fa fa-laptop"></i>
+                                   <i class="fa fa-phone"></i>
                               </div>
                               <div class="media-body">
-                                   <h3 class="media-heading"> <small></small></h3>
+                                   <h3 class="media-heading"> <a href="tel:+256784875007" style="color: white;font-family: 'Source Sans Pro';"> +256-784-875-007 </a></h3>
                                    <p class="color-white"></p>
                               </div>
                          </div>
 
                          <div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
                               <div class="media-object media-left">
-                                   <i class="fa fa-laptop"></i>
+                                   <i class="fa fa-envelope-o"></i>
                               </div>
                               <div class="media-body">
-                                   <h3 class="media-heading"><small></small></h3>
+                                   <h3 class="media-heading"> <a href="mailto:abrahamkakooza@gmail.com" style="color: white;font-family: 'Source Sans Pro';"> abrahamkakooza@gmail.com </a></h3>
+                                   <p class="color-white"></p>
+                              </div>
+                         </div>
+
+                         <div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
+                              <div class="media-object media-left">
+                                   <i class="fa fa-twitter"></i>
+                              </div>
+                              <div class="media-body">
+                                   <h3 class="media-heading"> <a href="https://twitter.com/KakoozaJerry" style="color: white;font-family: 'Source Sans Pro';"> @KakoozaJerry </a></h3>
+                                   <p class="color-white"></p>
+                              </div>
+                         </div>
+
+                         <div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
+                              <div class="media-object media-left">
+                                   <i class="fa fa-linkedin"></i>
+                              </div>
+                              <div class="media-body">
+                                   <h3 class="media-heading"> <a href="https://www.linkedin.com/in/kakoozajerry/" style="color: white;font-family: 'Source Sans Pro';"> Kakooza Jerry </a></h3>
+                                   <p class="color-white"></p>
+                              </div>
+                         </div>
+
+                         <div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
+                              <div class="media-object media-left">
+                                   <i class="fa fa-instagram"></i>
+                              </div>
+                              <div class="media-body">
+                                   <h3 class="media-heading"> <a href="https://www.instagram.com/the_ayahuasca_/" style="color: white;font-family: 'Source Sans Pro';"> Kakooza Jerry </a></h3>
                                    <p class="color-white"></p>
                               </div>
                          </div>
