--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="wow  color-white service-thumb" data-wow-delay="0.8s">
                          
                               <h3><strong>Technical Interview Prep Sessions Facilitator </strong></h3>
-                              <p><strong> NewYork, USA</strong></p>
+                              <p><strong> NewYork, USA (Remote)</strong></p>
                     </div>
                </div>
                
