--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@ http://www.templatemo.com/tm-498-stimulus
                <div class="col-md-3 col-sm-6">
                     <div class="wow  color-white service-thumb" data-wow-delay="0.8s">
                          
-                              <h3><strong>CodeHub UG Facilitator </strong></h3>
-                              <p><strong> Kampala, Uganda</strong></p>
+                              <h3><strong>University Thesis </strong></h3>
+                              <p><strong> A sales recommendation engine for local pharmacies.</strong></p>
+                              <i class="bi bi-arrow-right"></i>
+                              <a href="http://hdl.handle.net/20.500.12281/8769" style="color: white;font-family: 'Source Sans Pro';"> Link to project</a>
                     </div>
                </div>
                
