--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="home-thumb">
                          <div class="section-title">
                               <p class="wow fadeInUp" data-wow-delay="0.6s"><strong>Hello, I am Abraham Kakooza Jerry</strong></p>
-                              <p class="wow fadeInUp" data-wow-delay="0.9s"><strong>I am a Software developer with 2 years of experience at the intersection of technology and Telecommunications Engineering. I am currently working to accurately build a sales forecasting model for local Ugandan pharmacies on a daily basis. My expertise includes LSTM recurrent neural networks, statistical machine learning models, python and JavaScript programming languages.</strong></p>
+                              <p class="wow fadeInUp" data-wow-delay="0.9s"><strong>I am a Software developer with over 4 years of professional experience at the intersection of technology and Telecommunications Engineering. I built a sales forecasting model for local Ugandan pharmacies on a daily basis as my final year thesis. My expertise includes LSTM recurrent neural networks, statistical machine learning models, python and JavaScript programming languages.</strong></p>
                               
                               <a href="#about" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Next</a>
                               
